@@ -1,3 +1,10 @@
+2009-03-17  Tor Lillqvist  <tml@iki.fi>
+
+	* libgimpconfig/gimpconfigwriter.c
+	(gimp_config_writer_close_file): Drop Windows code to remove
+	target file before renaming. g_rename() nowadays takes care of
+	allowing replacing existing files on Windows.
+
 2009-03-16  Sven Neumann  <sven@gimp.org>
 
 	* configure.in: bumped GLib version for deprecated symbols.
